finished video #9, user auth being added

--- a/SVS/resources/sass/_variables.scss
+++ b/SVS/resources/sass/_variables.scss
@@ -1,43 +1,7 @@
-// 1. Body and Backgrounds
-$body-bg: #ced2da;
-$body-color: #636b6f;
-$text-color: #636b6f;
-$brand-primary: #3097d1;
+// Body
+$body-bg: #f8fafc;
 
-// 2. Colors (Bootstrap 5 uses $primary, $success, etc.)
-$primary: #3097d1;
-$info:    #8eb4cb;
-$success: #2ab27b;
-$warning: #cbb959;
-$danger:  #bf5329;
-
-// 3. Typography
-$font-family-sans-serif: 'Roboto', Arial, sans-serif;
+// Typography
+$font-family-sans-serif: 'Nunito', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
-
-// 4. Component Styling (This ensures Cards and Navbars look right)
-$card-bg: #fff;            // This makes your posts white against the grey background
-$card-border-width: 0;      // Removes ugly borders for a cleaner look
-$card-cap-bg: #fff;
-
-// 5. Navbar (If you want the dark theme from the screenshot)
-$navbar-dark-color: rgba(#fff, .55);
-$navbar-dark-active-color: #fff;
-
-//Buttons
-$btn-default-color: $text-color;
-
-// 3. Inputs
-$input-border-color: lighten($text-color, 40%);
-$input-focus-border-color: lighten($brand-primary, 25%); // Fixed the syntax error here
-$input-placeholder-color: lighten($text-color, 30%);
-
-// 4. Cards (In BS5, Panels were replaced by Cards)
-$card-cap-bg: #fff;
-$card-bg: #fff;
-
-//Panels
-$panel-default-heading-bg: #fff;
-
-
