final fantastic four section

--- a/SVS/resources/sass/_variables.scss
+++ b/SVS/resources/sass/_variables.scss
@@ -1,3 +1,11 @@
+// Brand Colors
+$baby-blue: #9eb4dd;
+$royal-blue: #13274C;
+
+// Override Bootstrap Defaults
+$primary: $royal-blue;
+$info: $baby-blue;
+
 // Body
 $body-bg: #f8fafc;
 
