--- a/SVS/resources/sass/app.scss
+++ b/SVS/resources/sass/app.scss
@@ -1,8 +1,11 @@
+// Variables
+@import 'variables';    
+// Custom Styles
+@import 'custom';
+
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 
-// Variables
-@import 'variables';
-
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
